--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,16 @@
     "start": "react-scripts start",
     "dev": "react-scripts start",
     "build": "react-scripts build",
+    "build:analyze": "npm run build && npx serve -s build",
+    "build:prod": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "eject": "react-scripts eject",
+    "lint": "eslint src --ext .js,.jsx",
+    "lint:fix": "eslint src --ext .js,.jsx --fix",
+    "format": "prettier --write src/**/*.{js,jsx,css,md}",
+    "prebuild": "npm run lint",
+    "postbuild": "echo 'Build completed successfully!'"
   },
   "eslintConfig": {
     "extends": [
@@ -52,7 +60,13 @@
     "tailwindcss": "^3.3.3",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "eslint": "^8.0.0",
+    "eslint-config-react-app": "^7.0.0",
+    "prettier": "^2.8.0",
+    "serve": "^14.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "webpack-bundle-analyzer": "^4.8.0"
   },
   "proxy": "http://localhost:5000"
 } 
