--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@sentry/react": "^7.120.3",
+    "axios": "^1.5.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.5.0",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.292.0",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^1.14.0"
   },
   "scripts": {
@@ -57,16 +58,16 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3",
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "tailwindcss-animate": "^1.0.7",
+    "compression-webpack-plugin": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.0",
+    "postcss": "^8.4.29",
     "prettier": "^2.8.0",
     "serve": "^14.0.0",
-    "compression-webpack-plugin": "^10.0.0",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "webpack-bundle-analyzer": "^4.8.0"
   },
   "proxy": "http://localhost:5000"
-} 
+}
